# polyfight

./: .gitignore  README.md  changelog.txt  information.txt  obfuscator.js  package.json  shuffler.js  tsconfig.json  webpack.config.js
server/: Cargo.toml  rustfmt.toml
server/src/: main.rs  server.rs
server/src/connection/: apis.rs  crypto.rs  mod.rs  packets.rs  wss.rs
server/src/game/: mod.rs  server.rs
server/src/game/entity/: ai.rs  base_entity.rs  mod.rs  projectile_entity.rs  shape_entity.rs  tank_entity.rs
server/src/game/entity/components/: mod.rs  turret.rs
server/src/physics/: collision.rs  mod.rs  shg.rs  vec2.rs
server/src/utils/: bot_names.txt  config.rs  functions.rs  inputs.rs  mod.rs  stream.rs  timed_mutex.rs
views/public/: client.js  index.html  style.css
views/ts/: client.ts  index.ts
views/ts/auth/: firebase.ts
views/ts/connection/: packets.ts  stream.ts  websocket.ts
views/ts/const/: consts.ts  default_theme.ts  enums.ts  tankdefs.ts
views/ts/entity/: base_entity.ts  projectile_entity.ts  shape_entity.ts  tank_entity.ts
views/ts/rendering/: canvas.ts  elements.ts
views/ts/utils/: color.ts  functions.ts  vector.ts
